# LuaJIT-libsndfile

./: .gitmodules  CMakeLists.txt  README.md  samplerate.lua  sndfile_ffi.lua
test/: format_change.lua  multi_sndfile_player_gui.lua  sample_conv.aiff  samplerate_change.lua  samplerate_change_short.lua  show_formats.lua  test.lua  wave_plot.lua
xiph/: CMakeLists.txt
